--- a/SteelSeriesSLSProvider.csproj
+++ b/SteelSeriesSLSProvider.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SteelSeriesSLSProvider</RootNamespace>
-    <AssemblyName>SteelSeriesSLSProvider</AssemblyName>
+    <AssemblyName>Driver.SteelSeries</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
